Documentation fix, fixed some small issues
